moving to RC2 for the sp

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=1.1.26-SNAPSHOT
+version=1.1.25-RC1
 # ********* NOTE DEVELOPERS SHOULD CHANGE THIS VALUES IN THEIR USER SPECIFIC GRADLE PROPERTIES ************
 # ********* THIS IS TO AVOID ACCIDENTAL COMMITS                                                ************
 # Single service deploy can be achieved by setting the properties below to a specific version
@@ -28,7 +28,7 @@ version=1.1.26-SNAPSHOT
 # the sp and idp must currently use the same version (or to be specific the jars
 # must have been built in the same checkout of the code.)
 # See IFS-2134 for more details.
-#sp.version=1.1.23-SP-VERSION
+sp.version=1.1.25-RC2
 #idp.version=1.1.23-IDP-VERSION
 
 
