--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ version=1.1.26-SNAPSHOT
 # the sp and idp must currently use the same version (or to be specific the jars
 # must have been built in the same checkout of the code.)
 # See IFS-2134 for more details.
-#sp.version=1.1.23-IDP-VERSION
+#sp.version=1.1.23-SP-VERSION
 #idp.version=1.1.23-IDP-VERSION
 
 
