IFS-2600 - Reinstated createTestSchema. It will be executed on initDB again now

--- a/ifs-data-layer/build.gradle
+++ b/ifs-data-layer/build.gradle
@@ -149,7 +149,10 @@ subprojects {
 }
 
 task initDB {
+    createTestSchema.mustRunAfter startMySql
+
     dependsOn startMySql
+    dependsOn createTestSchema
 }
 
 ext {
