--- a/ifs-data-layer/script-support.gradle
+++ b/ifs-data-layer/script-support.gradle
@@ -11,3 +11,16 @@ task startMySql(type:Exec) {
         }
     }
 }
+
+task createTestSchema(type:Exec) {
+    workingDir '../'
+    commandLine 'docker-compose', '-f', 'docker-compose.yml', '-f', 'docker-compose-dev.yml', 'exec', '-T', 'mysql' ,'mysql' ,'-uroot' ,'-ppassword' ,'-e', 'create database if not exists ifs_test'
+    doLast {
+        exec {
+            //wait for sql container to start.
+            //TODO need better method of waiting for startup.
+            workingDir '.'
+            commandLine 'sleep', '10'
+        }
+    }
+}
