--- a/ifs-data-layer/build.gradle
+++ b/ifs-data-layer/build.gradle
@@ -4,12 +4,12 @@ import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 
 apply from: "script-support.gradle"
 
-// This is necessary because the java plugin is also applied to
-// the ifs-data-layer project, which does _not_ build a jar.
-bootRepackage.enabled = false
 
 
 subprojects {
+
+
+    apply from: rootProject.file("java-spring-boot.gradle")
 
     ext.ifsWebSystemUserId="8394d970-b250-4b15-9621-3534325691b4"
 
