--- a/ifs-registration-service/build.gradle
+++ b/ifs-registration-service/build.gradle
@@ -2,9 +2,9 @@ import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
 import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
 import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 
+apply from: rootProject.file("java-spring-boot.gradle")
+
 description = """"""
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
