--- a/ifs-rest-api-service/build.gradle
+++ b/ifs-rest-api-service/build.gradle
@@ -6,6 +6,8 @@ if (project.hasProperty("profile")) {
     }
 }
 
+apply from: rootProject.file("java-spring-boot.gradle")
+
 jar {
     baseName = 'ifs-rest-api-service'
 }
@@ -17,7 +19,6 @@ configurations {
 
 ext {
     javaLanguageLevel = 1.8
-    sourceCompatibility = 1.8
 }
 
 bootRepackage.enabled=false
