--- a/openshift-support.gradle
+++ b/openshift-support.gradle
@@ -2,7 +2,11 @@
 if(project.hasProperty('profile') && profile == 'automated') {
     ext.openshiftEnv = project.properties['openshiftEnv'] ?: "automated"
 }
-
+//Workaround because of process resources.  dependency should be removed.
+apply from: rootProject.file("java-spring-boot.gradle")
+bootRepackage.enabled=false
+build.enabled=false
+// End workaround
 
 processResources {
 
