--- a/docker/build.gradle
+++ b/docker/build.gradle
@@ -1,22 +1,17 @@
-import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
-
-//apply plugin: 'java'
-
 subprojects {
-    task buildDocker(type: DockerBuildImage) {
-        tag = "innovateuk/${project.name}"
-        inputDir = project.projectDir
-    }
+    apply from: rootProject.file("openshift-build.gradle")
+    buildDocker.tag = "innovateuk/${project.name}"
 }
 
-allprojects {
 
-    buildscript {
+    allprojects {
 
-        repositories {
-            mavenCentral()
+        buildscript {
+
+            repositories {
+                mavenCentral()
+            }
         }
-    }
 
-}
+    }
 
