--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -1,4 +1,4 @@
-import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+
 
 def targetBuild = hasProperty('profile') ? profile : 'docker';
 apply from: targetBuild + "-build.gradle";
@@ -119,65 +119,66 @@ test {
     finalizedBy asciidoctor
 }
 
-task dbResetDockerEnv {
-    dependsOn "build"
-
-    def inputDir = project.file("$project.buildDir/docker-db-reset")
-    doFirst {
-        copy {
-            from file('src/main/docker/Dockerfile-dbreset')
-            rename 'Dockerfile-dbreset', 'Dockerfile'
-            into inputDir
-        }
-        copy {
-            from file('src/main/resources')
-            include 'db/**/*.sql'
-            into inputDir
-        }
-        copy {
-            from file("${rootProject.projectDir}/setup-files/scripts/docker/ldap-sync-from-ifs-db.sh")
-            into inputDir
-        }
-        copy {
-            from file("${rootProject.projectDir}/setup-files/scripts/docker/clean-migrate-db.sh")
-            into inputDir
-        }
-        copy {
-            from file("${rootProject.projectDir}/setup-files/scripts/docker/clean-migrate-db-sync-ldap.sh")
-            into inputDir
-        }
-    }
-}
-
-task dbResetDocker(type: DockerBuildImage) {
-    dependsOn "dbResetDockerEnv"
-    tag = 'innovateuk/dbreset'
-    inputDir = project.file("$project.buildDir/docker-db-reset")
-}
-
-task dbAnonymisedDumpDockerEnv {
-    dependsOn "build"
-    def inputDir = project.file("$project.buildDir/docker-db-anonymised")
-
-    doFirst {
-        copy {
-            from file('src/main/docker/proxysql/Dockerfile-proxysql')
-            rename 'Dockerfile-proxysql', 'Dockerfile'
-            into inputDir
-        }
-        copy {
-            from "src/main/docker/proxysql"
-            into "${inputDir}/proxysql"
-        }
-    }
-}
-
-
-task dbAnonymisedDumpDocker(type: DockerBuildImage, dependsOn: build) {
-    dependsOn "dbAnonymisedDumpDockerEnv"
-    tag = 'innovateuk/db-anonymised-data'
-    inputDir = project.file("$project.buildDir/docker-db-anonymised")
-}
+//TODO Reinstate
+//task dbResetDockerEnv {
+//    dependsOn "build"
+//
+//    def inputDir = project.file("$project.buildDir/docker-db-reset")
+//    doFirst {
+//        copy {
+//            from file('src/main/docker/Dockerfile-dbreset')
+//            rename 'Dockerfile-dbreset', 'Dockerfile'
+//            into inputDir
+//        }
+//        copy {
+//            from file('src/main/resources')
+//            include 'db/**/*.sql'
+//            into inputDir
+//        }
+//        copy {
+//            from file("${rootProject.projectDir}/setup-files/scripts/docker/ldap-sync-from-ifs-db.sh")
+//            into inputDir
+//        }
+//        copy {
+//            from file("${rootProject.projectDir}/setup-files/scripts/docker/clean-migrate-db.sh")
+//            into inputDir
+//        }
+//        copy {
+//            from file("${rootProject.projectDir}/setup-files/scripts/docker/clean-migrate-db-sync-ldap.sh")
+//            into inputDir
+//        }
+//    }
+//}
+//
+//task dbResetDocker(type: DockerBuildImage) {
+//    dependsOn "dbResetDockerEnv"
+//    tag = 'innovateuk/dbreset'
+//    inputDir = project.file("$project.buildDir/docker-db-reset")
+//}
+//
+//task dbAnonymisedDumpDockerEnv {
+//    dependsOn "build"
+//    def inputDir = project.file("$project.buildDir/docker-db-anonymised")
+//
+//    doFirst {
+//        copy {
+//            from file('src/main/docker/proxysql/Dockerfile-proxysql')
+//            rename 'Dockerfile-proxysql', 'Dockerfile'
+//            into inputDir
+//        }
+//        copy {
+//            from "src/main/docker/proxysql"
+//            into "${inputDir}/proxysql"
+//        }
+//    }
+//}
+//
+//
+//task dbAnonymisedDumpDocker(type: DockerBuildImage, dependsOn: build) {
+//    dependsOn "dbAnonymisedDumpDockerEnv"
+//    tag = 'innovateuk/db-anonymised-data'
+//    inputDir = project.file("$project.buildDir/docker-db-anonymised")
+//}
 
 
 asciidoctor {
