--- a/ifs-web-service/build.gradle
+++ b/ifs-web-service/build.gradle
@@ -1,6 +1,4 @@
-import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
-import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
-import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
+
 
 def targetBuild = hasProperty('profile') ? profile : 'docker';
 apply from: targetBuild + "-build.gradle";
@@ -12,6 +10,8 @@ subprojects {
     apply from: rootProject.file("java-spring-boot.gradle")
     // ifs-web-core is not a docker project.
     if (it.name != 'ifs-web-core') {
+
+        apply from: rootProject.file("openshift-build.gradle")
 
 
 
@@ -72,47 +72,11 @@ subprojects {
             }
         }
 
-        task buildDocker(type: DockerBuildImage) {
-            dependsOn ":docker:app-base-image:buildDocker"
-            dependsOn prepareDockerInput
-            tag = "innovateuk/"+project.name.replaceAll(/ifs-/,"")+":latest"
-            inputDir = project.file("$project.buildDir/docker")
-        }
-
-        task tagDocker(type: DockerTagImage) {
-            dependsOn buildDocker
-            imageId = buildDocker.getTag()
-            repository = project.dockerRegistry+"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
-            tag = project.version
-        }
-
-
-        task osStageRemote(type: DockerPushImage) {
-            dependsOn tagDocker
-            registryCredentials=getRemoteOCCredentials()
-            imageName=project.dockerRegistry+"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
-            tag=project.version
-        }
-
-        task tagDockerLocal(type: DockerTagImage) {
-            dependsOn buildDocker
-            imageId = buildDocker.getTag()
-            repository = "dummy"
-            doFirst {
-                repository = getLocalOCCredentials().url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
-                tag = project.version
-            }
-        }
-
-        task osStageLocal(type: DockerPushImage) {
-            dependsOn tagDockerLocal
-            imageName = "dummy"
-            doFirst {
-                registryCredentials = getLocalOCCredentials()
-                imageName = registryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
-                tag = project.version
-            }
-        }
+        buildDocker.dependsOn ":docker:app-base-image:buildDocker"
+        buildDocker.dependsOn prepareDockerInput
+        buildDocker.tag = "innovateuk/"+project.name.replaceAll(/ifs-/,"")+":latest"
+        buildDocker.inputDir = project.file("$project.buildDir/docker")
+        tagDocker.imageId="innovateuk/"+project.name.replaceAll(/ifs-/,"")+":latest"
 
         // Workaround for https://github.com/spring-projects/spring-boot/issues/8308
         // Can reinstate excludeDevtools in the bootRepackage task in next release
@@ -174,33 +138,34 @@ subprojects {
 //build.finalizedBy endpointDocumentation
 
 
-    task prepareFractalDockerInput {
-
-        def inputDir = project.file("$project.buildDir/fractal")
-        inputDir.delete();
-
-        doFirst {
-            copy {
-                from file("ifs-web-core/src/main/resources/templates/fractal-components")
-                into file("${inputDir}/fractal-components")
-            }
-            copy {
-                from file("ifs-web-core/src/main/resources/static")
-                into file("${inputDir}/static")
-            }
-            copy {
-                from file("fractal.js")
-                into inputDir
-            }
-            copy {
-                from file("fractal")
-                into inputDir
-            }
-        }
-    }
-
-    task buildFractal(type: DockerBuildImage) {
-        dependsOn prepareFractalDockerInput
-        tag = "innovateuk/fractal:latest"
-        inputDir = project.file("$project.buildDir/fractal")
-    }
+//TODO reinstate fractal build
+//    task prepareFractalDockerInput {
+//
+//        def inputDir = project.file("$project.buildDir/fractal")
+//        inputDir.delete();
+//
+//        doFirst {
+//            copy {
+//                from file("ifs-web-core/src/main/resources/templates/fractal-components")
+//                into file("${inputDir}/fractal-components")
+//            }
+//            copy {
+//                from file("ifs-web-core/src/main/resources/static")
+//                into file("${inputDir}/static")
+//            }
+//            copy {
+//                from file("fractal.js")
+//                into inputDir
+//            }
+//            copy {
+//                from file("fractal")
+//                into inputDir
+//            }
+//        }
+//    }
+//
+//    task buildFractal(type: DockerBuildImage) {
+//        dependsOn prepareFractalDockerInput
+//        tag = "innovateuk/fractal:latest"
+//        inputDir = project.file("$project.buildDir/fractal")
+//    }
