IFS-2631 - Reduced TCP socket probing timeout from 1s to 100ms

--- a/build.gradle
+++ b/build.gradle
@@ -272,6 +272,7 @@ dockerCompose {
     removeImages = "Local" // Accepted values are: "All", "Local" and "None"
     removeVolumes = false
 
+    waitForTcpPortsDisconnectionProbeTimeout = java.time.Duration.ofMillis(100)
 }
 
 task dockerTidy(type: Exec) {
