--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ include 'docker:oracle-jre'
 include 'docker:app-base-image'
 include 'docker:ifs-mysql'
 include 'docker:ifs-mail-sink'
+include 'docker:ifs-mysql-client'
 include 'ifs-commons'
 include 'ifs-resources'
 include 'ifs-data-layer'
