--- a/gradle.properties
+++ b/gradle.properties
@@ -35,4 +35,5 @@ version=1.1.26-SNAPSHOT
 #ldap.version=1.1.23-LDAP-VERSION
 #sil-stub.version=1.1.23-SIL-STUB-VERSION
 #mail-sink.version=1.1.23-MAIL-SINK-VERSION
+#mysql-client.version=1.1.23-MYSQL_CLIENT-VERSION
 dockerRegistry=docker-registry-default.apps.prod.ifs-test-clusters.com
