import stage working locally - so will run without root access

--- a/docker/ifs-mysql-client/Dockerfile
+++ b/docker/ifs-mysql-client/Dockerfile
@@ -1,7 +1,6 @@
-FROM alpine:3.5
-RUN apk add --no-cache mysql-client
-RUN apk add --no-cache gnupg
-RUN apk add --no-cache rng-tools
+FROM debian:jessie
+RUN apt-get update
+RUN apt-get install -y mysql-client
 RUN mkdir -p //.gnupg
 RUN chgrp -R 0 //.gnupg && chmod -R g+rwX //.gnupg
 CMD ["tail", "-f", "/dev/null"]
