Remove java / spring dependencies from auth-service.

--- a/ifs-auth-service/build.gradle
+++ b/ifs-auth-service/build.gradle
@@ -11,11 +11,7 @@ allprojects {
 }
 
 subprojects {
-    apply from: rootProject.file("java-spring-boot.gradle")
-    bootRepackage {
-        onlyIf { Task task -> false }
-    }
-
+//    apply from: rootProject.file("java-spring-boot.gradle")
     apply from: rootProject.file("openshift-build.gradle")
 
     buildDocker.tag="innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
