Added thread safety for statemachines whilst parallelising GTD

--- a/ifs-data-layer/ifs-data-service/src/test/resources/application-integration-test.properties
+++ b/ifs-data-layer/ifs-data-service/src/test/resources/application-integration-test.properties
@@ -30,3 +30,6 @@ ifs.data.service.file.storage.virus.scanning.enabled=false
 ifs.system.email.address=noreply-innovateuk@example.com
 
 ifs.web.baseURL=${ifsWebBaseURL}
+
+spring.sleuth.enabled=false
+spring.zipkin.enabled=false
