--- a/ifs-registration-service/build.gradle
+++ b/ifs-registration-service/build.gradle
@@ -1,5 +1,3 @@
-
-
 apply from: rootProject.file("java-spring-boot.gradle")
 apply from: rootProject.file("openshift-build.gradle")
 
@@ -24,9 +22,6 @@ dependencies {
     testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.8.0'
 }
 
-/**
- * CONFIGURATION FROM ifs-application-service/build.gradle
- */
 bootRun {
     addResources = false
 }
@@ -39,39 +34,16 @@ jar {
     baseName = 'ifs-registration-service'
 }
 
-apply from: rootProject.file("new-relic.gradle")
+apply from: rootProject.file("prepare-docker.gradle")
 
 
-task prepareDockerInput {
-    dependsOn getNewRelicAgent
-    dependsOn build
+task prepareDockerInputRegService {
+    dependsOn prepareDockerInput
     dependsOn ':ifs-auth-service:prepareLDAPEncryptionSecrets'
 
     def inputDir = project.file("$project.buildDir/docker")
 
     doFirst {
-        copy {
-            from "${project.projectDir}/docker/"
-            into inputDir
-            include 'Dockerfile-template'
-            rename 'Dockerfile-template', 'Dockerfile'
-            filter {
-                it.replaceAll('@version@', project.properties['version']).replaceAll('@app_name@', jar.baseName)
-            }
-        }
-        copy {
-            from jar
-            into inputDir
-        }
-        copy {
-            from file("${rootProject.projectDir}/setup-files/scripts/docker/coscale-monitoring.sh")
-            into inputDir
-        }
-        copy {
-            from file("${rootProject.projectDir}/setup-files/scripts/docker/newrelic.jar")
-            from file("${rootProject.projectDir}/setup-files/scripts/docker/newrelic.yml")
-            into inputDir
-        }
         copy {
             from file("${rootProject.projectDir}/ifs-auth-service/ifs-ldap-service/src/main/docker/certs/ldap-encryption.crt")
             into inputDir
@@ -79,11 +51,11 @@ task prepareDockerInput {
     }
 }
 
-buildDocker.dependsOn prepareDockerInput
-buildDocker.tag="innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
+buildDocker.dependsOn prepareDockerInputRegService
+buildDocker.tag = "innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
 buildDocker.inputDir = project.file("$project.buildDir/docker")
 
-tagDocker.imageId="innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
+tagDocker.imageId = "innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
 
 
 project.version = registrationServiceVersion
