--- a/ifs-sil-stub/build.gradle
+++ b/ifs-sil-stub/build.gradle
@@ -5,6 +5,8 @@ apply from: targetBuild + "-build.gradle";
 apply plugin: 'org.asciidoctor.convert'
 apply from: rootProject.file("java-spring-boot.gradle")
 apply from: rootProject.file("openshift-build.gradle")
+apply from: rootProject.file("prepare-docker.gradle")
+
 configurations {
     providedRuntime
 }
@@ -58,35 +60,10 @@ asciidoctor {
     }
 }
 
-/**
- * This task creates a `docker` directory in the $BUILD/docker` directory of the project,
- * where it will write all the necessary files to build a docker container.
- * In other words, after this task is executed, one could manually run `docker build .`
- * in the output directory.
- */
-task prepareDockerInput {
-    dependsOn build
-    def inputDir = project.file("$project.buildDir/docker")
 
-    doFirst {
-        copy {
-            from 'docker/'
-            into inputDir
-            include 'Dockerfile-template'
-            rename 'Dockerfile-template', 'Dockerfile'
-            filter {
-                it.replaceAll('@version@', project.properties['version']).replaceAll('@app_name@', jar.baseName)
-            }
-        }
-        copy {
-            from jar
-            into inputDir
-        }
-    }
-}
 
 buildDocker.dependsOn ":docker:app-base-image:buildDocker"
-buildDocker.dependsOn prepareDockerInput
+buildDocker.dependsOn prepareDockerBaseInput
 buildDocker.tag = "innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
 buildDocker.inputDir = project.file("$project.buildDir/docker")
 tagDocker.imageId = "innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
