--- a/ifs-data-layer/ifs-finance-data-service/build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/build.gradle
@@ -45,6 +45,13 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "mysql:mysql-connector-java"
     compile "org.flywaydb:flyway-core:4.1.2"
+    compile project(':ifs-commons')
+    compile project(':ifs-resources')
+
+    testCompile project(':ifs-resources')
+    testCompile project(":ifs-commons")
+    testCompile project(':ifs-resources').sourceSets.test.output
+    testCompile project(':ifs-commons').sourceSets.test.output
 }
 
 task initDB() {
