--- a/ifs-data-layer/ifs-finance-data-service/build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile project(':ifs-commons')
     compile project(':ifs-resources')
 
+    testCompile 'org.assertj:assertj-core:3.9.0'
     testCompile project(':ifs-resources')
     testCompile project(":ifs-commons")
     testCompile project(':ifs-resources').sourceSets.test.output
