--- a/ifs-data-layer/ifs-finance-data-service/docker-build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/docker-build.gradle
@@ -17,3 +17,5 @@ project.ext['flyway.password']="password"
 
 def flywayPatchesPath = "filesystem:" + project.buildDir.path + "/resources/main/db"
 project.ext['flyway.locations']=flywayPatchesPath + "/migration"
+
+ext.ifsFileStorageLocation="/mnt/ifs_storage"
