--- a/ifs-data-layer/ifs-finance-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-finance-data-service/src/main/resources/application.properties
@@ -25,9 +25,26 @@ spring.datasource.url=${ifsDatasourceUrl}
 spring.datasource.username=${ifsDatasourceUsername}
 spring.datasource.password=${ifsDatasourcePassword}
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddlauto=validate
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
+
 spring.profiles.active=${activeProfile}
 
 ifs.data.service.rest.baseURL=http://data-service:8080
+
+ifs.data.service.file.storage.base=${ifsFileStorageLocation}
+ifs.data.service.file.storage.containing.folder=ifs
+
+ifs.data.service.file.storage.virus.scanning.enabled=true
+ifs.data.service.file.storage.virus.scanning.holding.folder=virus-scan-holding
+ifs.data.service.file.storage.virus.scanning.quarantine.folder=virus-scan-quarantined
+ifs.data.service.file.storage.virus.scanning.scanned.folder=virus-scan-scanned
+ifs.data.service.file.storage.virus.scanning.scanned.move.delay.millis=5000
 
 spring.application.name=IFS Finance Data Service
 
