--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,10 @@
 version: '3'
 services:
 
+  ldap:
+    links:
+      - mysql:ifs-databaseifs
+
   registration-svc:
     hostname: registration-svc
     ports:
