--- a/ifs-data-layer/docker/Dockerfile-template
+++ b/ifs-data-layer/docker/Dockerfile-template
@@ -16,6 +16,6 @@ RUN chgrp -R 0 /mnt/ifs_storage && chmod -R g=u /mnt/ifs_storage
 ADD newrelic.jar /
 ADD newrelic.yml /
 ADD coscale-monitoring.sh /root/coscale-monitoring.sh
-ADD @app_name@-@version@-autostart.jar app.jar
+ADD @app_name@-@version@.jar app.jar
 
 ENTRYPOINT exec java -Dfile.encoding=UTF8 $JAVA_OPTS $JMX_OPTS -jar app.jar
