--- a/ifs-web-service/docker/Dockerfile-template
+++ b/ifs-web-service/docker/Dockerfile-template
@@ -9,7 +9,7 @@ VOLUME /tmp
 ADD newrelic.jar /
 ADD newrelic.yml /
 ADD coscale-monitoring.sh /root/coscale-monitoring.sh
-ADD @app_name@-@version@-autostart.jar app.jar
+ADD @app_name@-@version@.jar app.jar
 
 
 ENTRYPOINT exec java -Dfile.encoding=UTF8 $JAVA_OPTS $JMX_OPTS -jar app.jar
