bringing in line with the rest of the gradle build files

--- a/docker/ifs-mysql-client/build.gradle
+++ b/docker/ifs-mysql-client/build.gradle
@@ -1,41 +1,8 @@
-import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
-import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
-import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 
-task tagDocker(type: DockerTagImage) {
-    dependsOn buildDocker
-    imageId = buildDocker.getTag()
-    repository = project.dockerRegistry + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
-    tag = mailSinkVersion
-}
+buildDocker.tag = "innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
+tagDocker.tag = mysqlClientVersion
 
-task osStageRemote(type: DockerPushImage) {
-    dependsOn tagDocker
-    registryCredentials=getRemoteOCCredentials()
-    imageName = project.dockerRegistry + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
-    tag = mailSinkVersion
-}
+osStageRemote.tag = mysqlClientVersion
 
-task tagDockerLocal(type: DockerTagImage) {
-    dependsOn buildDocker
-    imageId = buildDocker.getTag()
-    repository = "dummy"
-    tag = "dummy"
-    doFirst {
-        repository = getLocalOCCredentials().url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
-        tag = mailSinkVersion
-    }
-}
-
-task osStageLocal(type: DockerPushImage) {
-    dependsOn tagDockerLocal
-    imageName = "dummy"
-    doFirst {
-        registryCredentials = getLocalOCCredentials()
-        imageName = registryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
-        tag = mailSinkVersion
-    }
-}
-
-
-
+tagDockerLocal.tag = mysqlClientVersion
+osStageLocal.tag = mysqlClientVersion
