bootRepackage extracted to common gradle file

--- a/java-spring-boot.gradle
+++ b/java-spring-boot.gradle
@@ -49,6 +49,18 @@ dependencies {
 
 }
 
+// Workaround for https://github.com/spring-projects/spring-boot/issues/8308
+// Can reinstate excludeDevtools in the bootRepackage task in next release
+springBoot {
+    excludeDevtools = !(project.hasProperty('cloud') && cloud == 'development');
+}
+
+bootRepackage {
+    mainClass = 'org.innovateuk.ifs.Application'
+    //    excludeDevtools = !(project.hasProperty('cloud') && cloud == 'development');
+
+}
+
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
