common processResources task created

--- a/java-spring-boot.gradle
+++ b/java-spring-boot.gradle
@@ -61,6 +61,18 @@ bootRepackage {
 
 }
 
+processResources {
+    filesMatching("*.properties") {
+        expand project.properties
+    }
+}
+
+processTestResources {
+    filesMatching("*.properties") {
+        expand project.properties
+    }
+}
+
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
