adding missing image statements for local deploys

--- a/docker/ifs-mail-sink/build.gradle
+++ b/docker/ifs-mail-sink/build.gradle
@@ -1,10 +1,14 @@
 
 buildDocker.tag = "innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
+
 tagDocker.onlyIf { !isNamedEnv() }
 tagDocker.tag = mailSinkVersion
+tagDocker.imageId = "innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
+
 
 osStageRemote.onlyIf { !isNamedEnv() }
 osStageRemote.tag = mailSinkVersion
 
 tagDockerLocal.tag = mailSinkVersion
+tagDockerLocal.imageId = "innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
 osStageLocal.tag = mailSinkVersion
