--- a/ifs-registration-service/build.gradle
+++ b/ifs-registration-service/build.gradle
@@ -108,6 +108,7 @@ buildDocker.tag="innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
 buildDocker.inputDir = project.file("$project.buildDir/docker")
 
 tagDocker.imageId="innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
+tagDockerLocal.imageId = "innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
 
 
 project.version = registrationServiceVersion
